feat: add secured operator recovery
